[package]
name = "nswindow"
version = "0.0.0"
edition = "2021"
authors = ["NickelAnge.Studio <rust@nickelange.studio>"]
description = "Nifty and Simple Windows allow easy opening and manipulation of system windows.."
license = "MIT"
repository = "https://github.com/NickelAngeStudio/nswindow"
keywords = ["window", "win", "manager", "gui", "view"]
categories = ["gui", "game-development"]
readme = "README.md"

# List of excluded files
exclude = [
    "target/*",
    "diag/*",
    "img/*",
    "tests/*",
    ".git/*",
    ".vscode/*",
    ".cargo/*",
    ".github/*",
    ".gitignore",
]

[features]
# Only support 1 window. Remove all extra multiple window code and faster for games.
single_opt = []

# Add timestamp to events.
event_ts = []

# Enable the use of Cairo 2D graphics (https://www.cairographics.org/)
cairo = []

# Enable the use of Vulkan 3D graphics (https://www.vulkan.org/)
vulkan = []

# Enable the use of OpenGL graphics (https://www.opengl.org/)
opengl = []

# Enable the use of Microsoft Direct3D (https://en.wikipedia.org/wiki/Direct3D)
direct3d = []

[dependencies]
nscfg = "1.0.0"


[build-dependencies]
bindgen = "0.69.4"
nscfg = "1.0.0"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.test]
opt-level = 3